--- a/HomeWork0627.csproj
+++ b/HomeWork0627.csproj
@@ -265,6 +265,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Screen.Designer.cs">
+      <DependentUpon>Screen.cs</DependentUpon>
+    </Compile>
     <Compile Include="StudentGrade_FRM.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -308,6 +314,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Screen.resx">
+      <DependentUpon>Screen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="StudentGrade_FRM.resx">
       <DependentUpon>StudentGrade_FRM.cs</DependentUpon>
     </EmbeddedResource>
